# futures-assignment

./: .gitignore  README.md  notebook.html  notebook.ipynb  pyproject.toml
data/: map_qid_to_future_contract.csv
data/future_chain_time_series/: USA_Future_Settlement_20220926.parquet  USA_Future_Settlement_20220927.parquet  USA_Future_Settlement_20220928.parquet  USA_Future_Settlement_20220929.parquet  USA_Future_Settlement_20220930.parquet  USA_Future_Settlement_20221003.parquet  USA_Future_Settlement_20221004.parquet  USA_Future_Settlement_20221005.parquet  USA_Future_Settlement_20221006.parquet  USA_Future_Settlement_20221007.parquet  USA_Future_Settlement_20221010.parquet  USA_Future_Settlement_20221011.parquet  USA_Future_Settlement_20221012.parquet  USA_Future_Settlement_20221013.parquet  USA_Future_Settlement_20221014.parquet  USA_Future_Settlement_20221017.parquet  USA_Future_Settlement_20221018.parquet  USA_Future_Settlement_20221019.parquet  USA_Future_Settlement_20221020.parquet  USA_Future_Settlement_20221021.parquet  USA_Future_Settlement_20221024.parquet  USA_Future_Settlement_20221025.parquet  USA_Future_Settlement_20221026.parquet  USA_Future_Settlement_20221027.parquet  USA_Future_Settlement_20221028.parquet  USA_Future_Settlement_20221031.parquet  USA_Future_Settlement_20221101.parquet  USA_Future_Settlement_20221102.parquet  USA_Future_Settlement_20221103.parquet  USA_Future_Settlement_20221104.parquet  USA_Future_Settlement_20221107.parquet  USA_Future_Settlement_20221108.parquet  USA_Future_Settlement_20221109.parquet  (+412 more)
(+4 files in other folders)
